--- a/sa.html
+++ b/sa.html
@@ -7,36 +7,27 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="team.html">Teams</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Stats</a>
-              </li>
-          <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Past Winners</a>
-              </li>
-           <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Fantasy Poll</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Tickets</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Merchandise</a>
-              </li>
+<body style="background-color: #ecc435;">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link active" href="team.html">Teams</a></li>
+                <li class="nav-item"><a class="nav-link" href="stats1.html">Stats</a></li>
+                <li class="nav-item"><a class="nav-link" href="past-winners.html">Past Winners</a></li>
+                <li class="nav-item"><a class="nav-link" href="fantasy-poll.html">Fantasy Poll</a></li>
+                <li class="nav-item"><a class="nav-link" href="tickets.html">Tickets</a></li>
+                <li class="nav-item"><a class="nav-link" href="merchandise.html">Merchandise</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
+        </nav>
+      </header>
     <!-- Header -->
     <div class="container text-center my-5">
         <h1 class="display-5">SOUTH AFRICA</h1>
@@ -49,7 +40,7 @@
             <!-- Image 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\ad.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="Images\ad.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal1">
                     <div class="card-body text-center">
                         <h5 class="card-title">Aiden Markram</h5>
                         <p class="card-text"></p>
@@ -59,7 +50,7 @@
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\qdk2.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <img src="Images\qdk2.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal2">
                     <div class="card-body text-center">
                         <h5 class="card-title">Quinton de Kock</h5>
                         <p class="card-text"></p>
@@ -69,7 +60,7 @@
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\an.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\an.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Anrich Nortje</h5>
                         <p class="card-text"></p>
@@ -78,7 +69,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\rr.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\rr.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Ryan Rickelton</h5>
                         <p class="card-text"></p>
@@ -87,7 +78,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\ob.jpg"class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\ob.jpg"class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Ottniel Baartman</h5>
                         <p class="card-text"></p>
@@ -96,7 +87,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\hk.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\hk.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Heinrich Klaasen</h5>
                         <p class="card-text"></p>
@@ -105,7 +96,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\ts.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\ts.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Tristan Stubbs</h5>
                         <p class="card-text"></p>
@@ -114,7 +105,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\rh.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\rh.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Reeza Hendricks</h5>
                         <p class="card-text"></p>
@@ -123,7 +114,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\mj.jpg"class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="Images\mj.jpg"class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal1">
                     <div class="card-body text-center">
                         <h5 class="card-title">Marco Jansen</h5>
                         <p class="card-text"></p>
@@ -133,7 +124,7 @@
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\km.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <img src="Images\km.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal2">
                     <div class="card-body text-center">
                         <h5 class="card-title">Keshav Maharaj</h5>
                         <p class="card-text"></p>
@@ -143,7 +134,7 @@
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\dm.jpg"class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\dm.jpg"class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">David Miller</h5>
                         <p class="card-text"></p>
@@ -152,7 +143,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\kr.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\kr.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Kagiso Rabada</h5>
                         <p class="card-text"></p>
@@ -161,7 +152,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\gc.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\gc.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Gerald Coetzee</h5>
                         <p class="card-text"></p>
@@ -170,7 +161,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\bf.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\bf.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Bjorn Fortuin</h5>
                         <p class="card-text"></p>
@@ -179,57 +170,19 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\tsh.jpg"class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\tsh.jpg"class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Tabraiz Shamsi</h5>
                         <p class="card-text"></p>
                     </div>
                 </div>
             </div>
-            
-
-
         </div>
     </div>
 
-    <!-- Modal 2 -->
-    <div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="modal2Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modal2Label"></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="Redmi Note 12 5G">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal 3 -->
-    <div class="modal fade" id="modal3" tabindex="-1" aria-labelledby="modal3Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modal3Label"></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="Redmi K60 Ultra">
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-         function openSubPage(url) {
-      window.open(url, '_blank');
-    }
-
-
-    </script>
+    
 </body>
 </html>
