--- a/wi.html
+++ b/wi.html
@@ -7,36 +7,27 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="team.html">Teams</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Stats</a>
-              </li>
-          <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Past Winners</a>
-              </li>
-           <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Fantasy Poll</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Tickets</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Merchandise</a>
-              </li>
+<body  style="background-color:#d5ba5d;">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link active" href="team.html">Teams</a></li>
+                <li class="nav-item"><a class="nav-link" href="stats1.html">Stats</a></li>
+                <li class="nav-item"><a class="nav-link" href="past-winners.html">Past Winners</a></li>
+                <li class="nav-item"><a class="nav-link" href="fantasy-poll.html">Fantasy Poll</a></li>
+                <li class="nav-item"><a class="nav-link" href="tickets.html">Tickets</a></li>
+                <li class="nav-item"><a class="nav-link" href="merchandise.html">Merchandise</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
+        </nav>
+      </header>
     <!-- Header -->
     <div class="container text-center my-5">
         <h1 class="display-5">WEST INDIES</h1>
@@ -49,7 +40,7 @@
             <!-- Image 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\rp1.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="Images\rp1.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal1">
                     <div class="card-body text-center">
                         <h5 class="card-title">Rovman Powell</h5>
                         <p class="card-text"></p>
@@ -59,7 +50,7 @@
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\aj.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <img src="Images\aj.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal2">
                     <div class="card-body text-center">
                         <h5 class="card-title">Alzarri Joseph</h5>
                         <p class="card-text"></p>
@@ -69,7 +60,7 @@
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\jc.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\jc.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Johnson Charles</h5>
                         <p class="card-text"></p>
@@ -78,7 +69,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\rc.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\rc.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Roston Chase</h5>
                         <p class="card-text"></p>
@@ -87,7 +78,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\sht.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\sht.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Shimron Hetmyer</h5>
                         <p class="card-text"></p>
@@ -96,7 +87,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\jh.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\jh.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Jason Holder</h5>
                         <p class="card-text"></p>
@@ -105,7 +96,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\sh.jpg"class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\hope.jpg"class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Shai Hope</h5>
                         <p class="card-text"></p>
@@ -114,7 +105,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\ah.jpg"class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\ah.jpg"class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Akeal Hosein</h5>
                         <p class="card-text"></p>
@@ -123,7 +114,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\sj.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="Images\shemar.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal1">
                     <div class="card-body text-center">
                         <h5 class="card-title">Shamar Joseph</h5>
                         <p class="card-text"></p>
@@ -133,7 +124,7 @@
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\bk.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <img src="Images\bk.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal2">
                     <div class="card-body text-center">
                         <h5 class="card-title">Brandon King</h5>
                         <p class="card-text"></p>
@@ -143,7 +134,7 @@
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\gk.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\gk.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Gudakesh Motie</h5>
                         <p class="card-text"></p>
@@ -152,7 +143,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\np.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\pooran.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Nicholas Pooran</h5>
                         <p class="card-text"></p>
@@ -161,7 +152,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\ar.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\ar.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Andre Russell</h5>
                         <p class="card-text"></p>
@@ -170,7 +161,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\sr.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\sr.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Sherfane Rutherford</h5>
                         <p class="card-text"></p>
@@ -179,7 +170,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\rs.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="Images\rs.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Romario Shepherd</h5>
                         <p class="card-text"></p>
@@ -187,65 +178,13 @@
                 </div>
             </div>
             
-
-
         </div>
     </div>
 
-    <!-- Modals for Full-Size Images -->
-    <!-- Modal 1 -->
-    <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modal1Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modal1Label">INDIA</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="Redmi Note 12 Pro">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal 2 -->
-    <div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="modal2Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modal2Label"></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="Redmi Note 12 5G">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal 3 -->
-    <div class="modal fade" id="modal3" tabindex="-1" aria-labelledby="modal3Label" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modal3Label"></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="Redmi K60 Ultra">
-                </div>
-            </div>
-        </div>
-    </div>
+ 
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-         function openSubPage(url) {
-      window.open(url, '_blank');
-    }
-
-
-    </script>
+    
 </body>
 </html>
