--- a/australia.html
+++ b/australia.html
@@ -8,35 +8,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color: #ead91b;">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="team.html">Teams</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Stats</a>
-              </li>
-          <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Past Winners</a>
-              </li>
-           <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Fantasy Poll</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Tickets</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Merchandise</a>
-              </li>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link active" href="team.html">Teams</a></li>
+                <li class="nav-item"><a class="nav-link" href="stats1.html">Stats</a></li>
+                <li class="nav-item"><a class="nav-link" href="past-winners.html">Past Winners</a></li>
+                <li class="nav-item"><a class="nav-link" href="fantasy-poll.html">Fantasy Poll</a></li>
+                <li class="nav-item"><a class="nav-link" href="tickets.html">Tickets</a></li>
+                <li class="nav-item"><a class="nav-link" href="merchandise.html">Merchandise</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
+        </nav>
+      </header>
     <!-- Header -->
     <div class="container text-center my-5">
         <h1 class="display-5">AUSTRALIA</h1>
@@ -49,7 +40,7 @@
             <!-- Image 1 -->
             <div class="col-md-4">
                 <div class="card" >
-                    <img src="images/marsh.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="images/marsh.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal1">
                     <div class="card-body text-center">
                         <h5 class="card-title">Mitchell Marsh</h5>
                     </div>
@@ -58,7 +49,7 @@
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card" >
-                    <img src="images/agar.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <img src="images/agar.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal2">
                     <div class="card-body text-center">
                         <h5 class="card-title">Ashton Agar</h5>
                     </div>
@@ -67,7 +58,7 @@
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/pat.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/pat.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Pat Cummins</h5>
                     </div>
@@ -75,7 +66,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/tim.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/tim.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Tim David</h5>
                     </div>
@@ -83,7 +74,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/eliis.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/eliis.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Nathan Ellis</h5>
                     </div>
@@ -91,7 +82,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/green.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/green.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Cameron Green</h5>
                     </div>
@@ -99,7 +90,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/josh.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/josh.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Josh Hazlewood</h5>
                     </div>
@@ -107,7 +98,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/head.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/head.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Travis Head</h5>
                     </div>
@@ -115,7 +106,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/inglis.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="images/inglis.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal1">
                     <div class="card-body text-center">
                         <h5 class="card-title">Josh Inglis</h5>
                     </div>
@@ -124,7 +115,7 @@
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/maxwell.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <img src="images/maxwell.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal2">
                     <div class="card-body text-center">
                         <h5 class="card-title">Glenn Maxwell</h5>
                     </div>
@@ -133,7 +124,7 @@
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/starc.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/starc.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Mitchell Starc</h5>
                     </div>
@@ -141,7 +132,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/stoinis.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/stoinis.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Marcus Stoinis</h5>
                     </div>
@@ -149,7 +140,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/wade.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/wade.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Matthew Wade</h5>
                     </div>
@@ -157,7 +148,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/warner.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/warner.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">David Warner</h5>
                     </div>
@@ -165,7 +156,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/zampa.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/zampa.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Adam Zampa</h5>
                     </div>
@@ -181,12 +172,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-         function openSubPage(url) {
-      window.open(url, '_blank');
-    }
-
-
-    </script>
+    
 </body>
 </html>
