--- a/england.html
+++ b/england.html
@@ -8,35 +8,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color: #fe4f2d;">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="team.html">Teams</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Stats</a>
-              </li>
-          <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Past Winners</a>
-              </li>
-           <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Fantasy Poll</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Tickets</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Merchandise</a>
-              </li>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link active" href="team.html">Teams</a></li>
+                <li class="nav-item"><a class="nav-link" href="stats1.html">Stats</a></li>
+                <li class="nav-item"><a class="nav-link" href="past-winners.html">Past Winners</a></li>
+                <li class="nav-item"><a class="nav-link" href="fantasy-poll.html">Fantasy Poll</a></li>
+                <li class="nav-item"><a class="nav-link" href="tickets.html">Tickets</a></li>
+                <li class="nav-item"><a class="nav-link" href="merchandise.html">Merchandise</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
+        </nav>
+      </header>
     <!-- Header -->
     <div class="container text-center my-5">
         <h1 class="display-5">ENGLAND</h1>
@@ -49,7 +40,7 @@
             <!-- Image 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/butler.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="images/butler.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal1">
                     <div class="card-body text-center">
                         <h5 class="card-title">Jos Buttler</h5>
                     </div>
@@ -58,7 +49,7 @@
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/ali.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <img src="images/ali.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal2">
                     <div class="card-body text-center">
                         <h5 class="card-title">Moeen Ali</h5>
                     </div>
@@ -67,7 +58,7 @@
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/jofra.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/jofra.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Jofra Archer</h5>
                     </div>
@@ -75,7 +66,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/jofra.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/jofra.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Jonathan Bairstow</h5>
                     </div>
@@ -83,7 +74,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/brook.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/brook.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Harry Brook</h5>
                     </div>
@@ -91,7 +82,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/currun.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/currun.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Sam Curran</h5>
                     </div>
@@ -99,7 +90,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/ben.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/ben.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Ben Duckett</h5>
                     </div>
@@ -107,7 +98,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/heartly.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/heartly.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Tom Hartley</h5>
                     </div>
@@ -115,7 +106,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/will.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="images/will.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal1">
                     <div class="card-body text-center">
                         <h5 class="card-title">Will Jacks</h5>
                         
@@ -125,7 +116,7 @@
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/jordan.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <img src="images/jordan.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal2">
                     <div class="card-body text-center">
                         <h5 class="card-title">Chris Jordan</h5>
                     </div>
@@ -134,7 +125,7 @@
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/liam.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/liam.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Liam Livingstone</h5>
                     </div>
@@ -142,7 +133,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/rashid.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/rashid.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Adil Rashid</h5>
                     </div>
@@ -150,7 +141,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/salt.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/salt.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Phil Salt</h5>
                     </div>
@@ -158,7 +149,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/topley.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/topley.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Reece Topley</h5>
                     </div>
@@ -166,7 +157,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="images/wood.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="images/wood.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3">
                     <div class="card-body text-center">
                         <h5 class="card-title">Mark Wood</h5>
                     </div>
