--- a/fantasy-poll.html
+++ b/fantasy-poll.html
@@ -3,68 +3,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random </title>
+    <title>Entertainment</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .player-card {
             margin: 10px;
             text-align: center;
         }
+        @keyframes spin {
+            from {
+                transform: rotateY(0deg);
+            }
+            to {
+                transform: rotateY(360deg);
+            }
+        }
+        .spin-animation {
+            animation: spin 1s ease-in-out;
+        }
     </style>
 </head>
-<body>
+<body style=" background-color: #f4f4f4;">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link active" href="team.html">Teams</a></li>
+                <li class="nav-item"><a class="nav-link" href="stats1.html">Stats</a></li>
+                <li class="nav-item"><a class="nav-link" href="past-winners.html">Past Winners</a></li>
+                <li class="nav-item"><a class="nav-link" href="fantasy-poll.html">Fantasy Poll</a></li>
+                <li class="nav-item"><a class="nav-link" href="tickets.html">Tickets</a></li>
+                <li class="nav-item"><a class="nav-link" href="merchandise.html">Merchandise</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
 
 <div class="container mt-5">
-    <h2 class="text-center">Player Card </h2>
+    <h2 class="text-center">Player Card Showcase</h2>
     <div class="row justify-content-center" id="player-card-container">
         <!-- The player card will be shown here -->
     </div>
     <div class="text-center mt-3">
-        <button id="show-player-btn" class="btn btn-primary">Show Random Player</button>
+        <p id="points-display" class="mb-3">Points Remaining: <strong>5</strong></p>
+        <button id="show-player-btn" class="btn btn-primary">Spin (2 Points)</button>
     </div>
 </div>
 
 <script>
     const players = [
-        { name: 'ROHIT SHARMA', position: 'OPENER', image: src='pc/rohit.jpg' },
-        { name: 'YASHASVI JAISWAL', position: 'OPENER', image: src='pc/yashasvi.jpg' },
-        { name: 'VIRAT KOHLI', position: 'OPENER', image: src='pc/virat.jpg' },
-        { name: 'SHIVAM DUBEY', position: 'HITTER', image: src='pc/shivam.jpg' },
-        { name: 'SURYA KUMAR YADAV', position: 'HITTER', image: src='pc/surya.jpg' },
-        { name: 'HARDIK PANDEY', position: 'ALL-ROUNDER', image: src='pc/hardik.jpg' },
-        { name: 'RAVINDRA JADEJA', position: 'ALL-ROUNDER', image: src='pc/jadeja.jpg' },
-        { name: 'AXAR PATEL', position: 'ALL-ROUNDER', image: src='pc/axar.jpg' },
-        { name: 'YUZVENDRA CHAHAL', position: 'SPIN BOWLER', image: src='pc/yuzi.jpg' },
-        { name: 'KULDEEP YADAV', position: 'SPIN BOWLER', image: src='pc/kuldeep.jpg' },
-        { name: 'JASPRITH BUMRAH', position: 'FAST BOWLER', image: src='pc/jassi.jpg' },
-        { name: 'MOHAMMAD SIRAJ', position: 'FAST BOWLER', image: src='pc/siraj.jpg' },
-        { name: 'ARSHDEEP SINGH', position: 'FAST BOWLER', image: src='pc/singh.jpg' },
-        { name: 'RISHABH PANT', position: 'WICKET KEEPER', image: src='pc/pant.jpg' },
-        { name: 'SANJU SAMSON', position: 'WICKET KEEPER', image: src='pc/sanju.jpg' },
+        { name: 'ROHIT SHARMA', position: 'OPENER', image: 'pc/rohit.jpg' },
+        { name: 'YASHASVI JAISWAL', position: 'OPENER', image: 'pc/yashasvi.jpg' },
+        { name: 'VIRAT KOHLI', position: 'OPENER', image: 'pc/virat.jpg' },
+        { name: 'SHIVAM DUBEY', position: 'HITTER', image: 'pc/shivam.jpg' },
+        { name: 'SURYA KUMAR YADAV', position: 'HITTER', image: 'pc/surya.jpg' },
+        { name: 'HARDIK PANDEY', position: 'ALL-ROUNDER', image: 'pc/hardik.jpg' },
+        { name: 'RAVINDRA JADEJA', position: 'ALL-ROUNDER', image: 'pc/jadeja.jpg' },
+        { name: 'AXAR PATEL', position: 'ALL-ROUNDER', image: 'pc/axar.jpg' },
+        { name: 'YUZVENDRA CHAHAL', position: 'SPIN BOWLER', image: 'pc/yuzi.jpg' },
+        { name: 'KULDEEP YADAV', position: 'SPIN BOWLER', image: 'pc/kuldeep.jpg' },
+        { name: 'JASPRITH BUMRAH', position: 'FAST BOWLER', image: 'pc/jassi.jpg' },
+        { name: 'MOHAMMAD SIRAJ', position: 'FAST BOWLER', image: 'pc/siraj.jpg' },
+        { name: 'ARSHDEEP SINGH', position: 'FAST BOWLER', image: 'pc/singh.jpg' },
+        { name: 'RISHABH PANT', position: 'WICKET KEEPER', image: 'pc/pant.jpg' },
+        { name: 'SANJU SAMSON', position: 'WICKET KEEPER', image: 'pc/sanju.jpg' },
     ];
 
+    let points = 5; // Initial points
+
     document.getElementById('show-player-btn').addEventListener('click', function() {
-        const container = document.getElementById('player-card-container');
-        container.innerHTML = ''; // Clear the previous card
-        
-        // Generate a random index between 0 and 14
-        const randomIndex = Math.floor(Math.random() * players.length);
-        const randomPlayer = players[randomIndex];
-        
-        // Create and display the new player card
-        const card = document.createElement('div');
-        card.classList.add('col-md-4', 'player-card');
-        card.innerHTML = `
-            <div class="card">
-                <img src="${randomPlayer.image}" class="card-img-top" alt="${randomPlayer.name}">
-                <div class="card-body">
-                    <h5 class="card-title">${randomPlayer.name}</h5>
-                    <p class="card-text">${randomPlayer.position}</p>
+        if (points >= 2) {
+            points -= 2; // Deduct 2 points for each spin
+            updatePointsDisplay();
+
+            const container = document.getElementById('player-card-container');
+            container.innerHTML = ''; // Clear the previous card
+
+            // Generate a random index between 0 and 14
+            const randomIndex = Math.floor(Math.random() * players.length);
+            const randomPlayer = players[randomIndex];
+
+            // Create and display the new player card
+            const card = document.createElement('div');
+            card.classList.add('col-md-4', 'player-card', 'spin-animation'); // Add spin animation class
+            card.innerHTML = `
+                <div class="card">
+                    <img src="${randomPlayer.image}" class="card-img-top" alt="${randomPlayer.name}">
+                    <div class="card-body">
+                        <h5 class="card-title">${randomPlayer.name}</h5>
+                        <p class="card-text">${randomPlayer.position}</p>
+                    </div>
                 </div>
-            </div>
-        `;
-        container.appendChild(card);
+            `;
+            container.appendChild(card);
+
+            // Remove the animation class after it completes (1 second)
+            setTimeout(() => {
+                card.classList.remove('spin-animation');
+            }, 1000);
+        } else {
+            alert('Insufficient points! You cannot spin anymore.');
+        }
     });
+
+    function updatePointsDisplay() {
+        const pointsDisplay = document.getElementById('points-display');
+        pointsDisplay.innerHTML = `Points Remaining: <strong>${points}</strong>`;
+    }
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
