--- a/india.html
+++ b/india.html
@@ -8,44 +8,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body style="background-color: #184ea5;">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="team.html">Teams</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="">Stats</a>
-        </li>
-	<li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="">Past Winners</a>
-        </li>
-	 <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="">Fantasy Poll</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="">Tickets</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="">Merchandise</a>
-        </li>
-
-
-
-
-        
-    </div>
-  </div>
-</nav>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link active" href="team.html">Teams</a></li>
+                <li class="nav-item"><a class="nav-link" href="stats1.html">Stats</a></li>
+                <li class="nav-item"><a class="nav-link" href="past-winners.html">Past Winners</a></li>
+                <li class="nav-item"><a class="nav-link" href="fantasy-poll.html">Fantasy Poll</a></li>
+                <li class="nav-item"><a class="nav-link" href="tickets.html">Tickets</a></li>
+                <li class="nav-item"><a class="nav-link" href="merchandise.html">Merchandise</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
     <!-- Header -->
     <div class="container text-center my-5">
         <h1 class="display-5" style="color: aliceblue;">INDIA</h1>
-        <p class="lead">..........</p>
+        <p class="lead" style="color: aliceblue;">___________________</p>
     </div>
 
     <!-- Photo Gallery -->
@@ -54,7 +40,7 @@
             <!-- Image 1 -->
             <div class="col-md-4">
                 <div class="card" style="background-color: #d6b268;">
-                    <img src="images/rohit.jpg" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="images/rohit.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal1">
                     <div class="card-body text-center">
                         <h5 class="card-title">ROHIT SHARMA</h5>
                        
