--- a/stats1.html
+++ b/stats1.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ICC T20 World Cup</title>
+  <title>Stats</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">ICC T20 World Cup 2024</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Teams</a></li>
-          <li class="nav-item"><a class="nav-link" href="stats1.html">Stats</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Past Winners</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Fantasy Poll</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Tickets</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Merchandise</a></li>
-        </ul>
+<body style=" background-color: #f4f4f4;">
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link active" href="team.html">Teams</a></li>
+            <li class="nav-item"><a class="nav-link" href="stats1.html">Stats</a></li>
+            <li class="nav-item"><a class="nav-link" href="past-winners.html">Past Winners</a></li>
+            <li class="nav-item"><a class="nav-link" href="fantasy-poll.html">Fantasy Poll</a></li>
+            <li class="nav-item"><a class="nav-link" href="tickets.html">Tickets</a></li>
+            <li class="nav-item"><a class="nav-link" href="merchandise.html">Merchandise</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-</header>
+    </nav>
+  </header>
 
 <div class="container mt-4">
   <h2>Batting Stats</h2>
@@ -44,7 +44,7 @@
           <div class="row g-4">
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Rahmanullah Gurbaz">
+                <img src="Images/gurbaz.jpg" class="card-img-top" alt="Rahmanullah Gurbaz">
                 <div class="card-body text-center">
                   <h5 class="card-title">Rahmanullah Gurbaz</h5>
                   <p class="card-text">Runs - 281</p>
@@ -53,7 +53,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Rohit Sharma">
+                <img src="Images/rohit.jpg" class="card-img-top" alt="Rohit Sharma">
                 <div class="card-body text-center">
                   <h5 class="card-title">Rohit Sharma</h5>
                   <p class="card-text">Runs - 257</p>
@@ -62,7 +62,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Travis Head">
+                <img src="Images/head.jpg" class="card-img-top" alt="Travis Head">
                 <div class="card-body text-center">
                   <h5 class="card-title">Travis Head</h5>
                   <p class="card-text">Runs - 255</p>
@@ -86,7 +86,7 @@
           <div class="row g-4">
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Nicholas Pooran">
+                <img src="Images/pooran.jpg" class="card-img-top" alt="Nicholas Pooran">
                 <div class="card-body text-center">
                   <h5 class="card-title">Nicholas Pooran</h5>
                   <p class="card-text">98</p>
@@ -95,7 +95,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Aaron Jones">
+                <img src="Images/aaron.jpg" class="card-img-top" alt="Aaron Jones">
                 <div class="card-body text-center">
                   <h5 class="card-title">Aaron Jones</h5>
                   <p class="card-text">94*</p>
@@ -104,7 +104,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Rohit Sharma">
+                <img src="Images/rohit.jpg" class="card-img-top" alt="Rohit Sharma">
                 <div class="card-body text-center">
                   <h5 class="card-title">Rohit Sharma</h5>
                   <p class="card-text">92</p>
@@ -128,7 +128,7 @@
           <div class="row g-4">
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Richie Berrington">
+                <img src="Images/richie.jpg" class="card-img-top" alt="Richie Berrington">
                 <div class="card-body text-center">
                   <h5 class="card-title">Richie Berrington</h5>
                   <p class="card-text">102.00</p>
@@ -137,7 +137,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Harry Brook">
+                <img src="Images/brook.jpg" class="card-img-top" alt="Harry Brook">
                 <div class="card-body text-center">
                   <h5 class="card-title">Harry Brook</h5>
                   <p class="card-text">72.50</p>
@@ -146,7 +146,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Brandon McMullen">
+                <img src="Images/mcmullan.jpg" class="card-img-top" alt="Brandon McMullen">
                 <div class="card-body text-center">
                   <h5 class="card-title">Brandon McMullen</h5>
                   <p class="card-text">70.00</p>
@@ -175,7 +175,7 @@
           <div class="row g-4">
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Fazalhaq Farooqui">
+                <img src="Images/farooqi.jpg" class="card-img-top" alt="Fazalhaq Farooqui">
                 <div class="card-body text-center">
                   <h5 class="card-title">Fazalhaq Farooqui</h5>
                   <p class="card-text">Wickets - 17</p>
@@ -184,7 +184,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Arshdeep Singh">
+                <img src="Images/singh.jpg" class="card-img-top" alt="Arshdeep Singh">
                 <div class="card-body text-center">
                   <h5 class="card-title">Arshdeep Singh</h5>
                   <p class="card-text">Wickets - 17</p>
@@ -193,7 +193,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Jasprit Bumrah">
+                <img src="Images/jassi.jpg" class="card-img-top" alt="Jasprit Bumrah">
                 <div class="card-body text-center">
                   <h5 class="card-title">Jasprit Bumrah</h5>
                   <p class="card-text">Wickets - 15</p>
@@ -217,7 +217,7 @@
           <div class="row g-4">
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Fazalhaq Farooqui">
+                <img src="Images/farooqi.jpg" class="card-img-top" alt="Fazalhaq Farooqui">
                 <div class="card-body text-center">
                   <h5 class="card-title">Fazalhaq Farooqui</h5>
                   <p class="card-text">5/9</p>
@@ -226,7 +226,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Akeal Hosein">
+                <img src="Images/ah.jpg" class="card-img-top" alt="Akeal Hosein">
                 <div class="card-body text-center">
                   <h5 class="card-title">Akeal Hosein</h5>
                   <p class="card-text">5/11</p>
@@ -235,7 +235,7 @@
             </div>
             <div class="col-md-4">
               <div class="card">
-                <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Anrich Nortje">
+                <img src="Images/an.jpg" class="card-img-top" alt="Anrich Nortje">
                 <div class="card-body text-center">
                   <h5 class="card-title">Anrich Nortje</h5>
                   <p class="card-text">4/7</p>
@@ -259,7 +259,7 @@
             <div class="row g-4">
               <div class="col-md-4">
                 <div class="card">
-                  <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Richie Berrington">
+                  <img src="Images/rachin.jpg" class="card-img-top" alt="Richie Berrington">
                   <div class="card-body text-center">
                     <h5 class="card-title">Rachin Ravindra</h5>
                     <p class="card-text">4.50</p>
@@ -268,7 +268,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card">
-                  <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Aaron Jones">
+                  <img src="Images/southee.jpg" class="card-img-top" alt="Aaron Jones">
                   <div class="card-body text-center">
                     <h5 class="card-title">Tim Southee</h5>
                     <p class="card-text">5.14</p>
@@ -277,7 +277,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card">
-                  <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Rohit Sharma">
+                  <img src="Images/boult.jpg" class="card-img-top" alt="Rohit Sharma">
                   <div class="card-body text-center">
                     <h5 class="card-title">Trent Boult</h5>
                     <p class="card-text">6.55</p>
