--- a/team.html
+++ b/team.html
@@ -7,40 +7,31 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="team.html">Teams</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Stats</a>
-              </li>
-          <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Past Winners</a>
-              </li>
-           <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Fantasy Poll</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Tickets</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="">Merchandise</a>
-              </li>
+<body style=" background-color: #f4f4f4;">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a  class="navbar-brand" href="index.html">ICC T20 World Cup 2024</a >
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item"><a  class="nav-link active" href="team.html">Teams</a ></li>
+                <li class="nav-item"><a  class="nav-link" href="stats1.html">Stats</a ></li>
+                <li class="nav-item"><a  class="nav-link" href="past-winners.html">Past Winners</a ></li>
+                <li class="nav-item"><a  class="nav-link" href="fantasy-poll.html">Fantasy Poll</a ></li>
+                <li class="nav-item"><a  class="nav-link" href="tickets.html">Tickets</a ></li>
+                <li class="nav-item"><a  class="nav-link" href="merchandise.html">Merchandise</a ></li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
+        </nav>
+      </header>
     <!-- Header -->
     <div class="container text-center my-5">
         <h1 class="display-5">QUALIFIED TEAMS FOR TOP 8</h1>
-        <p class="lead">Explore the latest Redmi smartphone models with high-quality images.</p>
+
     </div>
 
     <!-- Photo Gallery -->
@@ -49,8 +40,8 @@
             <!-- Image 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <a href="india.html" target="_blank">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\logo.png" class="card-img-top" alt="Redmi Model 1" data-bs-toggle="modal" data-bs-target="#modal1"></a>
+                    <a  href="india.html" target="_blank">
+                    <img src="Images\logo.png" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal1"></a >
                     <div class="card-body text-center">
                         <h5 class="card-title">INDIA</h5>
                         <p class="card-text"></p>
@@ -60,8 +51,8 @@
             <!-- Image 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <a href="australia.html" target="_blank">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\ausl.jpg" class="card-img-top" alt="Redmi Model 2" data-bs-toggle="modal" data-bs-target="#modal2"></a>
+                    <a  href="australia.html" target="_blank">
+                    <img src="Images\ausl.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal2"></a >
                     <div class="card-body text-center">
                         <h5 class="card-title">AUSTRALIA</h5>
                         <p class="card-text"></p>
@@ -71,8 +62,8 @@
             <!-- Image 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <a href="england.html" target="_blank">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\endl.png" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
+                    <a  href="england.html" target="_blank">
+                    <img src="Images\endl.png" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3"></a >
                     <div class="card-body text-center">
                         <h5 class="card-title">ENGLAND</h5>
                         <p class="card-text"></p>
@@ -81,8 +72,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <a href="sa.html" target="_blank">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\sal.webp" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
+                    <a  href="sa.html" target="_blank">
+                    <img src="Images\sal.webp" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3"></a >
                     <div class="card-body text-center">
                         <h5 class="card-title">SOUTH AFRICA</h5>
                         <p class="card-text"></p>
@@ -91,8 +82,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <a href="ban.html" target="_blank">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\banl.jpg"class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
+                    <a  href="ban.html" target="_blank">
+                    <img src="Images\banl.jpg"class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3"></a >
                     <div class="card-body text-center">
                         <h5 class="card-title">BANGLADESH</h5>
                         <p class="card-text"></p>
@@ -101,8 +92,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <a href="afg.html" target="_blank">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\afgl.jpg" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
+                    <a  href="afg.html" target="_blank">
+                    <img src="Images\afgl.jpg" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3"></a >
                     <div class="card-body text-center">
                         <h5 class="card-title">AFGANISTAN</h5>
                         <p class="card-text"></p>
@@ -111,8 +102,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <a href="usa.html" target="_blank">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\usal.png" class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
+                    <a  href="usa.html" target="_blank">
+                    <img src="Images\usal.png" class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3"></a >
                     <div class="card-body text-center">
                         <h5 class="card-title">USA</h5>
                         <p class="card-text"></p>
@@ -121,8 +112,8 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <a href="wi.html" target="_blank">
-                    <img src="C:\Users\Dell\OneDrive\Documents\GitHub\project\Images\wil.png"class="card-img-top" alt="Redmi Model 3" data-bs-toggle="modal" data-bs-target="#modal3"></a>
+                    <a  href="wi.html" target="_blank">
+                    <img src="Images\wil.png"class="card-img-top"  data-bs-toggle="modal" data-bs-target="#modal3"></a >
                     <div class="card-body text-center">
                         <h5 class="card-title">WEST INDIES</h5>
                         <p class="card-text"></p>
